--- a/language/EN.json
+++ b/language/EN.json
@@ -577,7 +577,7 @@
             "M_AUT": "Music Author:"
         },
         "lyrics": {
-            "LY_DESC": "elsamwol will find the lyrics of the song.",
+            "LY_DESC": "Alexa will find the lyrics of the song.",
             "NEED": "\n```You Must Write Any Song!```\n",
             "SLY": "Lyrics:",
             "AUT": "Song Owner:",
